# IndustryBenchmarks2024

./: .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yaml
.github/: pull_request_template.md
docs/: Makefile  environment.yaml  make.bat
docs/source/: claimed_systems.rst  conf.py  contributing-inputs.rst  get-in-touch.rst  index.rst  input_preparation.rst  installation.rst  phase_1_4_instructions.rst  prep_and_debug.rst  reviewersguide.rst
docs/source/private/: experimental_data.csv  overview.rst  prep_and_debug.rst
docs/source/public/: claimed_systems.rst  contributing_inputs.rst  input_preparation.rst  overview.rst
industry_benchmarks/analysis/: 1_download_and_extract_data.py  2_pymbar4.py  3_combine_csv.py  README.md  pymbar4.yaml
industry_benchmarks/analysis/compute_performance_analysis/: L40S_performance_analysis.csv  README.md
industry_benchmarks/analysis/notebooks/: compare_public_private_sets.ipynb  generate_system_metrics.ipynb  improvement_per_ns.ipynb  openfe_fep_plus.ipynb
industry_benchmarks/analysis/private_processed_results/: combined_pymbar3_calculated_dg_data.csv  combined_pymbar3_cumulative_data.csv  combined_pymbar3_edge_data.csv  combined_pymbar4_edge_data.csv  (+2 more)
industry_benchmarks/utils/: __init__.py  data_gathering.py  extract_results.py  fix_networks.py  info_form_private_sets.txt  input_validation.py  plan-rbfe-network.py  plan_rbfe_network.py  plan_rbfe_radial_network.py  rename_exp_data.py  results_cleanup.py  tape_networks.py  traj_cleanup.py
inputs/original_structures/: README.md
utils/: input_validation.py
(+322 files in other folders)
