[build-system]
requires = [
	"setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "industry_benchmarks"
description = ""
readme = ""
authors = [{name = "The OpenFE developers", email = "openfe@omsf.io"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
urls = {Homepage = "https://industrybenchmarks2024.readthedocs.io/en/latest/"}
requires-python = ">= 3.9"
dependencies = [
]
version = "0.1"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
namespaces = false
where = ["industry_benchmarks"]
include = ["utils"]
